<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/products"
        android:enabled="true"
        android:icon="@drawable/inventory"
        android:title="@string/products"/>
    <item
        android:id="@+id/storage"
        android:enabled="true"
        android:icon="@drawable/local_shipping"
        android:title="@string/storage"/>
    <item
        android:id="@+id/branch"
        android:enabled="true"
        android:icon="@drawable/apartment"
        android:title="@string/branch"/>
    <item
        android:id="@+id/category"
        android:enabled="true"
        android:icon="@drawable/category"
        android:title="@string/category"/>
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>

</menu>